@@ -141,3 +141,114 @@ DEFINE_TESTCASE(checkinitweight1, backend && !multi && !remote) {
     TEST_EQUAL(non_zero_inits, 2);
     return true;
 }
+
+class CheckStatsWeight : public Xapian::Weight {
+  public:
+    double factor;
+
+    Xapian::Database db;
+
+    string term;
+
+    Xapian::termcount & sum;
+    Xapian::termcount & sum_squares;
+
+    mutable Xapian::termcount len_upper;
+    mutable Xapian::termcount len_lower;
+    mutable Xapian::termcount wdf_upper;
+
+    CheckStatsWeight(const Xapian::Database & db_,
+		     const string & term_,
+		     Xapian::termcount & sum_,
+		     Xapian::termcount & sum_squares_)
+	: factor(-1.0), db(db_), term(term_),
+	  sum(sum_), sum_squares(sum_squares_),
+	  len_upper(0), len_lower(Xapian::termcount(-1)), wdf_upper(0)
+    {
+	need_stat(COLLECTION_SIZE);
+	need_stat(RSET_SIZE);
+	need_stat(AVERAGE_LENGTH);
+	need_stat(TERMFREQ);
+	need_stat(RELTERMFREQ);
+	need_stat(QUERY_LENGTH);
+	need_stat(WQF);
+	need_stat(WDF);
+	need_stat(DOC_LENGTH);
+	need_stat(DOC_LENGTH_MIN);
+	need_stat(DOC_LENGTH_MAX);
+	need_stat(WDF_MAX);
+    }
+
+    void init(double factor_) {
+	factor = factor_;
+    }
+
+    Weight * clone() const {
+	return new CheckStatsWeight(db, term, sum, sum_squares);
+    }
+
+    double get_sumpart(Xapian::termcount wdf, Xapian::termcount doclen) const {
+	TEST_EQUAL(get_collection_size(), db.get_doccount());
+	TEST_EQUAL(get_rset_size(), 0);
+	TEST_EQUAL(get_average_length(), db.get_avlength());
+	TEST_EQUAL(get_termfreq(), db.get_termfreq(term));
+	TEST_EQUAL(get_reltermfreq(), 0);
+	TEST_EQUAL(get_query_length(), 1);
+	TEST_EQUAL(get_wqf(), 1);
+	TEST_REL(doclen,>=,len_lower);
+	TEST_REL(doclen,<=,len_upper);
+	TEST_REL(wdf,<=,wdf_upper);
+	sum += wdf;
+	sum_squares += wdf * wdf;
+	return 1.0;
+    }
+
+    double get_maxpart() const {
+	if (len_upper == 0) {
+	    len_lower = get_doclength_lower_bound();
+	    len_upper = get_doclength_upper_bound();
+	    wdf_upper = get_wdf_upper_bound();
+	}
+	return 1.0;
+    }
+
+    double get_sumextra(Xapian::termcount doclen) const {
+	return 1.0 / doclen;
+    }
+
+    double get_maxextra() const { return 1.0; }
+};
+
+/// Check the weight subclass gets the correct stats.
+DEFINE_TESTCASE(checkstatsweight1, backend && !remote) {
+    Xapian::Database db = get_database("apitest_simpledata");
+    Xapian::Enquire enquire(db);
+    Xapian::TermIterator a;
+    for (a = db.allterms_begin(); a != db.allterms_end(); ++a) {
+	const string & term = *a;
+	enquire.set_query(Xapian::Query(term));
+	Xapian::termcount sum = 0;
+	Xapian::termcount sum_squares = 0;
+	CheckStatsWeight wt(db, term, sum, sum_squares);
+	enquire.set_weighting_scheme(wt);
+	Xapian::MSet mset = enquire.get_mset(0, db.get_doccount());
+
+	// The document order in the multi-db case isn't the same as the
+	// postlist order on the combined DB, so it's hard to compare the
+	// wdf for each document in the Weight objects, so we can sum
+	// the wdfs and the squares of the wdfs which provides a decent
+	// check that we're not getting the wrong wdf values (it ensures
+	// they have the right mean and standard deviation).
+	Xapian::termcount expected_sum = 0;
+	Xapian::termcount expected_sum_squares = 0;
+	Xapian::PostingIterator i;
+	for (i = db.postlist_begin(term); i != db.postlist_end(term); ++i) {
+	    Xapian::termcount wdf = i.get_wdf();
+	    expected_sum += wdf;
+	    expected_sum_squares += wdf * wdf;
+	}
+	TEST_EQUAL(sum, expected_sum);
+	TEST_EQUAL(sum_squares, expected_sum_squares);
+    }
+    return true;
+}
